# voca

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
archive/: .cursorrules  TEST.md  TOOLS.md  WIP.md  agent.md  eslint.config.js  jest.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
archive/.cursor/rules/: langgraph-typing-rules.mdc
archive/experiments/: test_streaming_stt.py
archive/experiments/kyutai-stt/: benchmark.py
archive/playwright-report/: index.html
archive/src/: loop.ts
archive/src/api/: index.ts
archive/src/constants/: llm.ts  timeouts.ts
archive/src/graph/: graph.ts  index.ts  state.ts  types.ts
archive/src/linear/: changes.ts  client.ts  comments.ts  enrichment.ts  focus-manager.ts  id-mapper.ts  issues.ts  projects.ts  ui.ts
archive/src/loop/: intent-detection.ts  state-helpers.ts  tool-definitions.ts  tool-execution.ts
archive/src/prompts/: system_planner_instructions.ts  system_post_tool_instructions.ts  system_scratchpad_instructions.ts  (+2 more)
archive/ui-client/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
commands/: setup.md  start.md  stop.md  voice.md
mcp-server/: README.md  pyproject.toml
mcp-server/tests/: test_focus_transfer.py  test_pause_detector.py  test_tool_contracts.py  test_transcript_buffer.py
mcp-server/voca_voice/: audio_pipeline.py  config.py  pause_detector.py  server.py  stt_parakeet.py  transcript_buffer.py  tts_kokoro.py  types.py
skills/voice-mode/: SKILL.md
specs/: instant-focus-transfer.md
(+87 files in other folders)
