[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voca-voice"
version = "0.1.0"
description = "Audio MCP server for Voca voice interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.26.0",
  "sounddevice>=0.5.0",
  "numpy>=1.26.0",
  "torch>=2.2.0",
  "torchaudio",
  "parakeet-mlx>=0.4.0",
  "mlx>=0.25.2",
  "mlx-audio[tts]>=0.3.1",
  "transformers==5.0.0rc3",
  "soundfile>=0.12.1",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
voca-voice = "voca_voice.server:main"

[tool.setuptools]
packages = ["voca_voice"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
prerelease = "allow"
